--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -8,6 +8,7 @@ body, html {
   height: 530px;
   background-color: #fff;
   border-radius: 2px;
+  text-align: center;
 }
 
 .transition-all {
@@ -16,4 +17,13 @@ body, html {
 
 h1,h2,h3 {
   margin: 0;
+}
+
+[data-contenteditable=true]:empty:before {
+  content: attr(placeholder);
+//  display: block; /* For Firefox */
+}
+
+[data-contenteditable=true]:empty {
+  color: #aaaaaa;
 }
