--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -27,3 +27,9 @@ h1,h2,h3 {
 [data-contenteditable=true]:empty {
   color: #aaaaaa;
 }
+
+.avatar-img {
+  width: 165px;
+  height: 165px;
+  border-radius: 50%;
+}
