--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -2,15 +2,24 @@ body, html {
   background-color: #FFF;
   margin: 0px;
   font-family: 'freight-sans-pro', sans-serif;
+  font-weight: 400;
+  -webkit-font-smoothing: antialiased;
 }
 
 .maker-card {
   padding: 50px;
   width: 320px;
-  height: 430px;
+  height: 400px;
   background-color: #fff;
   border-radius: 2px;
   text-align: center;
+  box-shadow: 2px 2px 7px 0px rgba(0,0,0,0.25);;
+}
+.maker-card span, .maker-card div {
+  font-size: 22px;
+  line-height: 33px;
+  padding: 0 2px;
+  color: #8c8c8c;
 }
 
 .transition-all {
@@ -18,8 +27,7 @@ body, html {
 }
 
 h1,h2,h3 {
-  margin: 0;
-//  line-height: 120%;
+  margin: 15px;
   font-weight: 500;
 }
 
@@ -34,6 +42,16 @@ h1 {
 
 [data-contenteditable=true]:empty {
   color: #aaaaaa;
+}
+[data-contenteditable=true] {
+  outline: 1px solid rgba(224,224,224,0);
+  outline-offset: 0;
+  transition: all 300ms ease-in-out;
+}
+[contenteditable=true]:focus, input:focus, textarea:focus {
+  outline: 1px solid #dddddd;
+  outline-offset: 0;
+  background: #f7f7f7;
 }
 
 .avatar-img {
