--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -14,16 +14,32 @@ body, html {
   border-radius: 2px;
   text-align: center;
   box-shadow: 2px 2px 7px 0px rgba(0,0,0,0.25);
-  transform-origin: left;
+  transform-origin: top;
   &.staged {
     opacity: 0;
-    transform-origin: left;
-    transform: translate3d(-60px, 0px, 0px) rotateY(35deg);
-    transition: transform 500ms ease-in, opacity 500ms ease-out;
+    transform-origin: top;
+    transform: translate3d(0px, -150px, 0px) rotateX(00deg);
+    transition: transform 500ms linear, opacity 200ms ease-in-out;
   }
   &.bounce {
-    transform: translate3d(5px, 0px, 0px);
-    transition: transform 300ms ease-out;
+    transform: translate3d(0px, 5px, 0px);
+    transition: transform 200ms ease-out;
+  }
+  &.normal {
+    transform: translate3d(0px, 0px, 0px);
+    transition: transform 150ms ease-out;
+  }
+  &.left {
+    transform: translate3d(-20px, 0px, 0px);
+    transition: transform 200ms ease-out 100ms;
+  }
+  &.bounce-right {
+    transform: translate3d(305px, 0px, 0px);
+    transition: transform 500ms ease-in-out;
+  }
+  &.right {
+    transform: translate3d(300px, 0px, 0px);
+    transition: transform 400ms ease-in-out;
   }
 }
 .maker-card span, .maker-card div {
